--- a/assets/styles/components/_dialog.scss
+++ b/assets/styles/components/_dialog.scss
@@ -7,8 +7,17 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($base, .2);
     z-index: 99;
+
+    &__backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($base, .2);
+        z-index: 98;
+    }
 
     &__card {
         position: relative;
@@ -70,4 +79,13 @@
     &__actions {
         display: flex;
     }
+    &.snackbar {
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+}
+
+.animate__animated.animate__fadeInUp,
+.animate__animated.animate__fadeOutDown {
+    --animate-duration: .2s;
 }
